--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
     <div class="view">
         <div class="header">
             <div class="title">
-
-
+                HEOGEUT'S TESTWEB
             </div>
 
         </div>
